@@ -162,6 +162,6 @@ class BaseController < ApplicationController
     else
       "#{polymorphic_path(commentable)}#comments"      
     end    
-  end
+  end  
 
 end
