@@ -6,4 +6,3 @@ Hey <%= @user.login %>!
 
 Thanks,
 The <%= AppConfig.community_name %> team
-
