@@ -11,3 +11,8 @@ The <%= AppConfig.community_name %> team
 ---------------------------------------------------------------------------------
 If you believe you received this notice in error, please contact support at
 <%= AppConfig.support_email %>
+
+<% if @unsubscribe_link %>
+To stop receiving updates about new comments on this <%= @comment.commentable_type %>, visit this URL:
+<%= @unsubscribe_link %>
+<% end %>
