@@ -119,6 +119,7 @@
 #en: comments_deleted: Comments deleted
 #en: comments_rss: Comments RSS
 #en: community_tagline: CommunityEngine Rocks!
+#en: comment_unsubscribe_succeeded: Thanks, you have been unsubscribed from notifications on this comment.
 #en: compose: Compose
 #en: compose_message: Compose message
 #en: confirm_password: Confirm Password
