@@ -255,6 +255,8 @@ en:
   comments_rss: Comments RSS
   #en: community_tagline: CommunityEngine Rocks!
   community_tagline: CommunityEngine Rocks!
+  #en: comment_unsubscribe_succeeded: Thanks, you have been unsubscribed from notifications on this comment.  
+  comment_unsubscribe_succeeded: "Thanks, you have been unsubscribed from notifications on this comment."
   #en: compose: Compose
   compose: Compose
   #en: compose_message: Compose message
