@@ -73,6 +73,19 @@ class CommentTest < ActiveSupport::TestCase
     end  
   end
 
+  def test_should_unsubscribe_notifications
+    AppConfig.allow_anonymous_commenting = true
+    first_comment = Comment.create!(:comment => 'foo', :author_email => 'alicia@foo.com', :author_ip => '123.123.123', :recipient => users(:quentin), :commentable => users(:quentin), :notify_by_email => true)        
+    comment = Comment.create!(:comment => 'bar', :author_email => 'alicia@foo.com', :author_ip => '123.123.123', :recipient => users(:quentin), :commentable => users(:quentin), :notify_by_email => true)        
+    assert_equal first_comment.notify_by_email, true
+    assert_equal comment.notify_by_email, true
+    AppConfig.allow_anonymous_commenting = false    
+    
+    comment.unsubscribe_notifications
+    assert comment.reload.notify_by_email.eql?(false)
+    assert first_comment.reload.notify_by_email.eql?(false)
+  end
+
 
 end
   
